***************************************
version-4.1.0

NEW FEATURES
   - New '--trimming' option (trimgalore)
   - New '--pdx' option (xengsort, #149)

SIGNIFICANT USER-VISIBLE CHANGES
   - Update default `--salmonQuantOpts` value
   - revert the heatmap legend scalone on the report (#157)

BUG
   - Fix bugs when only one sample is processed (#161)

***************************************
version-4.0.1

NEW FEATURES
  - Add Xlaevis10.1 genome annotation
  - Update dsl2 template

***************************************
version-4.0.0

NEW FEATURES
  - DSL2 version of the RNA-seq pipeline (#144)
  - Add identito monitoring (#145)
  - Add STAR-Salmon sub-workflow (#133)
  - Add '--pseudoAligner' option to run Salmon from raw reads (#133)
  - Add '--denovo' option for reference-guided transcripts assembly
  - Add Stringtie for transcripts assembly
  - Add Scallop for transcripts assembly
  - Check mapping proportion for both STAR and Hisat2 (#140)
  - Add Mouse mm39 genome annotation

SIGNIFICANT USER-VISIBLE CHANGES
  - Add T2T chm13 fasta genome
  - Improve warnings reporting in report
  - Remove default values for '--counts' and '--aligner'. These options are now mandatory
  - Updata MultiQC version to v1.11

BUG FIXES
  - Default STAR options

***************************************
version-3.2.0

NEW FEATURES
  - Add saturation percent in main table (#138)
  - Add Warnings in the report
  - Generate bigwig files
  - Add polymorphism call for Human identito-vigilance
  - Update Bombyx Mori annotation

SIGNIFICANT USER-VISIBLE CHANGES
  - Add Qualimap instead of rseqc read distribution and gene body coverage (#136, #139)
  - Use new Newflow template
  - Update all tool versions
  - Duplicates are now calculed over mapped reads using all duplicate types (single, pair, optical)

BUG FIXES
  - fix the seed in preseq
  - Fix bug when --stranded is set on command line (#120)

DEPRECATED