@@ -8,7 +8,7 @@ process getCountsPerGeneType {
   label 'lowMem'
 
   input:
-  path tpmGenetype
+  path counts
   path gtf
 
   output:
@@ -18,7 +18,7 @@ process getCountsPerGeneType {
   script:
   """
   echo \$(R --version | awk 'NR==1{print \$1,\$3}') > versions.txt
-  gene_type_expression.r ${tpmGenetype} ${gtf} counts_genetype.txt
+  gene_type_expression.r ${counts} ${gtf} counts_genetype.txt
   """
 }
 
